--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <h1 class="compText" style="background-color: rgba(0,0,168,255)"><span id="demo" style="color: white;"></span><span style="color: white;"> FPS:3</span><span id="element1"  style="color: white;"></span><span style="color: white;"> Mem </span><span id="element2" style="color: white;"></span><span style="color: white;"> CPU 000</span><span Id="element3" style="color: white;"></span></h1>
   <div class="container-fluid">
+    <div class="verticalLineLeft" style="height: 800px;"></div>
     <div class="container" style="border-color: white;">
       <h2 class="compText" style="color:rgba(0,0,168,255)">MENU</h2>
-      <div class="verticalLineLeft"></div>
       <span class="compText"  id="GodziOS">unfun games</span>
       <div class="row">
         <div class="col-sm">
