--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1 class="compText" style="background-color: rgba(0,0,168,255)"><span id="demo" style="color: white;"></span><span style="color: white;"> FPS:3</span><span id="element1"  style="color: white;"></span><span style="color: white;"> Mem </span><span id="element2" style="color: white;"></span><span style="color: white;"> CPU 000</span><span Id="element3" style="color: white;"></span></h1>
   <div class="container-fluid">
-    <div class="verticalLineLeft" style="height: 800px;"></div>
+    <div class="verticalLineLeft" style="height: auto"></div>
     <div class="container" style="border-color: white;">
       <h2 class="compText" style="color:rgba(0,0,168,255)">MENU</h2>
       <span class="compText"  id="GodziOS">unfun games</span>
@@ -109,7 +109,7 @@
         </div>
       </div>
     </div>
-    <div class="verticalLineRight" style="height: 800px;"></div>
+    <div class="verticalLineRight" style="height:auto;"></div>
     <div class="verticalLineLeft"></div>
     <div class="container" style="border-color: white;">
       <h2 class="compText" style="color: rgba(0,0,168,255)">MENU</h2>
@@ -133,7 +133,7 @@
       <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Registry . CCP . Z</span></h3>
       <h3 class="compText" id="cursor" style="color: rgba(0,0,168,255)"><span>C:/HOME> </span></h3>
     </div>
-    <div class="verticalLineRight" style="height: 800px;"></div>
+    <div class="verticalLineRight" style="height: auto"></div>
   </div>
   </div>
 
