--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <a id="photos" href="info.html">
           <h4 class="compText" id="aqua">help & about</h4></a>
         </div>
-      </div>
+      </div><br><br><br><br><br><br>
     </div>
     <div class="verticalLineRight" style="height:auto;"></div>
     <div class="verticalLineLeft"></div>
