--- a/index.html
+++ b/index.html
@@ -120,17 +120,20 @@
       <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Quick start: Cmd Line</span></h3><br>
       <h3 class="compText"><span id="aqua" style="text-decoration: underline;">Directory</span><span style="color: rgba(0,0,168,255)"> Of C:/Home</span></h3>
       <h3 class="compText" style="color:rgba(0,0,168,255)"><span>DATE_ TIME_ SIZE </span></h3><br>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>01/13  18:32  0000 </span><span style="text-decoration: underline;"><a href="index.html"><span>.</span></a></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>01/16 20:24 0053 </span><a href="https://soundcloud.com/godzi_g/bless-me?si=3b8adb9203d94843bc0e8fb8b34e2148&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">bless me 💎💎</span></a></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>02/13  18:32  0055 </span><span style="text-decoration: underline;"><a href="index.html"><span>.</span></a></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>01/16 16:20 0053 </span><a href="https://soundcloud.com/godzi_g/bless-me?si=3b8adb9203d94843bc0e8fb8b34e2148&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">bless me 💎💎</span></a></h3>
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>11/10 02:30 0064 </span><a href="https://soundcloud.com/godzi_g/dark-side-of-the-rainbow?si=10116071302a483296a054115ab9ea79&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">dark side of the rainbow</span></a></h3>
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 11:30 0038 </span><a href="https://soundcloud.com/godzi_g/budwise?si=459f4f9a53dc4764913b2292a40b95bb&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">budwise</span></a></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="color:rgba(0,0,168,255);">11/08 10:15 0000 </span><span style="text-decoration: underline;">MakeSite.CCP</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0000 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">DoDistro . CCP . Z</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255);"><span>04/13 20:24 0000 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">MakeHome . CCP . Z</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0000 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Registry . CCP . Z</span></h3>
+
+      <h3 class="compText"><span style="color:rgba(0,0,168,255)">11/08 10:15 0022</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">godzi.CCP</span></h3>
+
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0018</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">DoDistro.CCP</span></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255);"><span>04/13 19:24 0055 </span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">MakeHome.CCP</span></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 18:40 0043 </span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Regis.CCPß.Z</span></h3>
       <h3 class="compText" id="cursor" style="color: rgba(0,0,168,255)"><span>C:/HOME> </span></h3>
     </div>
     <div class="verticalLineRight" style="height: auto"></div>
