--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GodziOS</title>
+  <title>GodziOS info</title>
 
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -11,13 +11,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
   <h1 class="compText" style="background-color: rgba(0,0,168,255)"><span id="demo" style="color: white;"></span><span style="color: white;"> FPS:3</span><span id="element1"  style="color: white;"></span><span style="color: white;"> Mem </span><span id="element2" style="color: white;"></span><span style="color: white;"> CPU 000</span><span Id="element3" style="color: white;"></span></h1>
   <div class="container-fluid">
-    <div class="verticalLineLeft" style="height: 800px;"></div>
+    <div class="verticalLineLeft" style="height: auto;"></div>
     <div class="container" style="border-color: white;">
       <a href="index.html"><h2 class="compText" style="color:rgba(0,0,168,255)">MENU</h2></a>
       <br><h3 class="compText" id="aqua">ABOUT</h3>
@@ -34,33 +33,35 @@
         except for not all of it. Just the main screen. Also this screen. So basically get ur ass toasted roasted degeneraate atheist. GOD is near baaby 😎😎🐲
       </p><br><br>
 
-
     </div>
-    <div class="verticalLineRight" style="height: 800px;"></div>
+    <div class="verticalLineRight" style="height: auto;"></div>
     <div class="verticalLineLeft"></div>
     <div class="container" style="border-color: white;">
-      <a href="index.html"><h2 class="compText" style="color: rgba(0,0,168,255)">MENU</h2></a>
+      <h2 class="compText" style="color: rgba(0,0,168,255)">MENU</h2>
       <div class="verticalLineLeft" style="width: 5px;"></div>
       <span class="compText"  id="GodziOS">GodziOS V5.83</span>
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>Public Domain Operating System (kinda)</span></h3><br>
-      <h3 class="compText" style="color: rgba(140,7,13,255);"><span style="text-decoration: underline;">Help and Index</span></h3>
+      <a href="info.html"><h3 class="compText" style="color: rgba(140,7,13,255);"><span style="text-decoration: underline;">Help and Index</span></h3></a>
       <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Quick start: Cmd Line</span></h3><br>
       <h3 class="compText"><span id="aqua" style="text-decoration: underline;">Directory</span><span style="color: rgba(0,0,168,255)"> Of C:/Home</span></h3>
       <h3 class="compText" style="color:rgba(0,0,168,255)"><span>DATE_ TIME_ SIZE </span></h3><br>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>01/10  20:24  0000 </span><span style="text-decoration: underline;">.</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>01/16 20:24 0053 </span><a href="https://soundcloud.com/godzi_g/bless-me?si=3b8adb9203d94843bc0e8fb8b34e2148&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">bless me 💎💎</span></a></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>02/13  18:32  0055 </span><span style="text-decoration: underline;"><a href="index.html"><span>.</span></a></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>01/16 16:20 0053 </span><a href="https://soundcloud.com/godzi_g/bless-me?si=3b8adb9203d94843bc0e8fb8b34e2148&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">bless me 💎💎</span></a></h3>
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>11/10 02:30 0064 </span><a href="https://soundcloud.com/godzi_g/dark-side-of-the-rainbow?si=10116071302a483296a054115ab9ea79&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">dark side of the rainbow</span></a></h3>
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 11:30 0038 </span><a href="https://soundcloud.com/godzi_g/budwise?si=459f4f9a53dc4764913b2292a40b95bb&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><span id="aqua" style="text-decoration: underline;">budwise</span></a></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="color:rgba(0,0,168,255);">11/08 10:15 0000 </span><span style="text-decoration: underline;">MakeSite.CCP</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0000 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">DoDistro . CCP . Z</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255);"><span>04/13 20:24 0000 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">MakeHome . CCP . Z</span></h3>
-      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0000 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Registry . CCP . Z</span></h3>
+
+      <h3 class="compText"><span style="color:rgba(0,0,168,255)">11/08 10:15 0022</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">godzi.CCP</span></h3>
+
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0018</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">DoDistro.CCP</span></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255);"><span>04/13 19:24 0055 </span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">MakeHome.CCP</span></h3>
+      <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 18:40 0043 </span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Regis.CCPß.Z</span></h3>
       <h3 class="compText" id="cursor" style="color: rgba(0,0,168,255)"><span>C:/HOME> </span></h3>
     </div>
-    <div class="verticalLineRight" style="height: 800px;"></div>
+    <div class="verticalLineRight" style="height: auto;"></div>
   </div>
   </div>
 
@@ -77,15 +78,5 @@
     <h4 class="compText" style="color: white;">Reads:10055 Writes:143  Lines=52214</h4>
   </div>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script>
-  const d = new Date();
-  const dateString = d.toLocaleDateString('en-US', {
-  year: 'numeric',
-  month: '2-digit',
-  day: '2-digit',
-});
-  document.getElementById("demo").innerHTML = dateString;</script>
   <script src="script.js"></script>
 </body>
