--- a/info.html
+++ b/info.html
@@ -54,11 +54,11 @@
       <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">godzi.CCP</span></h3>
 
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 20:24 0018</span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">DoDistro.CCP</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Dist.CCP</span></h3>
       <h3 class="compText" style="color: rgba(0,0,168,255);"><span>04/13 19:24 0055 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">MakeHome.CCP</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Home.CCP</span></h3>
       <h3 class="compText" style="color: rgba(0,0,168,255)"><span>04/13 18:40 0043 </span></h3>
-      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">Regis.CCPß.Z</span></h3>
+      <h3 class="compText" style="color: rgba(140,7,13,255)"><span style="text-decoration: underline;">R.CCPß.Z</span></h3>
       <h3 class="compText" id="cursor" style="color: rgba(0,0,168,255)"><span>C:/HOME> </span></h3>
     </div>
     <div class="verticalLineRight" style="height: auto;"></div>
