--- a/photoGallery.html
+++ b/photoGallery.html
@@ -73,5 +73,23 @@
         </div>
       </div>
     </div><br>
+    <div class="row">
+      <div class="col-sm">
+        <div class="card-mb 2">
+          <div>
+            <img src="imgs/darkSideCig.JPG">
+            <h2>ciggy break!</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card-mb 2">
+          <div>
+            <img src="imgs/luxorTrippy.JPG">
+            <h2>exclusive for u</h2>
+          </div>
+        </div>
+      </div>
+    </div><br>
 </body>
 </html>
