--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,7 @@
     <a href="index.html"><p>⥞ BACK</p></a>
     <div class="row">
       <a href="blogPosts/test.html"><h2 style="color: red;">1. test test - 02/13/2025</h2></a>
+      <a href="blogPosts/luxOr.html"><h2 style="color: red;">2. jabberwocky - 02/21/2025</h2></a>
     </div>
   </div>
 </body>
