--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
     <div class="row">
       <a href="blogPosts/test.html"><h2 style="color: red;">1. test test - 02/13/2025</h2></a>
       <a href="blogPosts/luxOr.html"><h2 style="color: red;">2. jabberwocky - 02/21/2025</h2></a>
+      <a href="blogPosts/weAre.html"><h2 style="color: red;">3. WE ARE ALL GOD - 02/23/2025</h2></a>
     </div>
   </div>
 </body>
