--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,8 @@
       <a href="blogPosts/luxOr.html"><h2 style="color: red;">2. jabberwocky - 02/21/2025</h2></a>
       <a href="blogPosts/weAre.html"><h2 style="color: red;">3. WE ARE ALL GOD - 02/23/2025</h2></a>
       <a href="blogPosts/woo.html"><h2 style="color: red;">4. WOOoooo - 03/10/2025</h2></a>
+      <a href="blogPosts/flames.html"><h2 style="color: red;">5. flames - 03/11/2025</h2></a>
+      <a href="blogPosts/wellWell.html"><h2 style="color: red;">6. well well - 03/12/2025</h2></a>
     </div>
   </div>
 </body>
