--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
           <h4 class="compText" id="aqua">.random🪲👽🐲🥴🥴</h4></a>
         </div>
         <div class="col-sm">
+          <a href="https://www.soundgym.co/member/profile?m=kc4fvj2tu87" target="_blank">
+            <img id="soundGym" src="imgs/soundgym.png" alt="soundGymLogo">
+          </a>
+          <br>
+          <a href="https://www.soundgym.co/member/profile?m=kc4fvj2tu87" target="_blank">
+          <h4 class="compText" id="aqua">Soundgym
+          </h4></a>
+        </div>
+        <div class="col-sm">
           <a href="info.html">
             <img id="tikTok" src="imgs/infoIcon.png" alt="infoIcon">
           </a>
@@ -107,7 +116,8 @@
           <a id="photos" href="info.html">
           <h4 class="compText" id="aqua">help & about</h4></a>
         </div>
-      </div><br><br><br><br><br><br>
+      </div>
+      <br><br><br><br><br><br>
     </div>
     <div class="verticalLineRight" style="height:auto;"></div>
     <div class="verticalLineLeft"></div>
