--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,7 @@
       <a href="blogPosts/woo.html"><h2 style="color: red;">4. WOOoooo - 03/10/2025</h2></a>
       <a href="blogPosts/flames.html"><h2 style="color: red;">5. flames - 03/11/2025</h2></a>
       <a href="blogPosts/wellWell.html"><h2 style="color: red;">6. well well - 03/12/2025</h2></a>
+      <a href="blogPosts/dream.html"><h2 style="color: red;">7. it's just a dream.. - 04/28/2025</h2></a>
     </div>
   </div>
 </body>
