--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
       <a href="blogPosts/flames.html"><h2 style="color: red;">5. flames - 03/11/2025</h2></a>
       <a href="blogPosts/wellWell.html"><h2 style="color: red;">6. well well - 03/12/2025</h2></a>
       <a href="blogPosts/dream.html"><h2 style="color: red;">7. it's just a dream.. - 04/28/2025</h2></a>
+      <a href="blogPosts/diamondEars.html"><h2 style="color: red;">8. 💎💎DIAMOND EARS💎💎 - 05/28/2025</h2></a>
     </div>
   </div>
 </body>
