--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,7 @@
       <a href="blogPosts/wellWell.html"><h2 style="color: red;">6. well well - 03/12/2025</h2></a>
       <a href="blogPosts/dream.html"><h2 style="color: red;">7. it's just a dream.. - 04/28/2025</h2></a>
       <a href="blogPosts/diamondEars.html"><h2 style="color: red;">8. 💎💎DIAMOND EARS💎💎 - 05/28/2025</h2></a>
+      <a href="blogPosts/pot.html"><h2 style="color: red;">9. pot - 06/23/2025</h2></a>
     </div>
   </div>
 </body>
