forgotto chanige link

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
       <a href="blogPosts/diamondEars.html"><h2 style="color: red;">8. 💎💎DIAMOND EARS💎💎 - 05/28/2025</h2></a>
       <a href="blogPosts/pot.html"><h2 style="color: red;">9. pot - 06/23/2025</h2></a>
       <a href="blogPosts/monttaaiini.html"><h2 style="color: red;">1o. mountian - 07/2/2025</h2></a>
-      <a href="blogPosts/monttaaiini.html"><h2 style="color: red;">11. git toekn thing - 07/29/2025</h2></a>
+      <a href="blogPosts/gitKeything.html"><h2 style="color: red;">11. git toekn thing - 07/29/2025</h2></a>
     </div>
   </div>
 </body>
