Made dragon page

--- a/infoSecret.html
+++ b/infoSecret.html
@@ -20,19 +20,7 @@
     <div class="container" style="border-color: white;">
       <a href="index.html"><h2 class="compText" style="color:rgba(0,0,168,255)">MENU</h2></a>
       <br><h3 class="compText" id="aqua">ABOUT</h3>
-      <p class="compText" style="text-indent: 30px;">greetings. u have found the official genuine one and only one of a kind bonafide certified G✺o✺D✺z✺I~g.('god-zee-g') website. i own all the rights to everything that i have but only some of the lefts. be advised. 1.6 gigahurtz is right there! write there. There. </p><br>
-      <h3 class="compText" id="aqua">INSPIRATION</h3>
-      <p class="compText" style="text-indent: 30px;">i assume this has no significance to u as a degenerate. this website is a page i based on templeOS, an operating system designed by Terry A. Davis as the 'third temple', the representation of God's return. </p>
-      <div class="col-sm">
-        <img class="templePics" src="imgs/templeOSLogo.png">
-      </div>
-      <div class="col-sm">
-        <img class="templePics" src="imgs/HOLY-C.jpeg">
-      </div><br>
-      <p class="compText" style="text-indent: 30px;">
-        except for not all of it. Just the main screen. Also this screen. So basically get ur ass toasted roasted degeneraate atheist. GOD is near baaby 😎😎<a href="infoSecret.html">🐲</a> 
-      </p><br><br>
-
+      <p class="compText" style="text-indent: 30px;">wow! you found my secret link. Truth be told, I enjoy the green text far more than the format on my blog bleh. This looks stellar. Amazing. Simply incredible. How lucky am i to be the person i am today way better than the other people other days amazing from my skills and talents god given but i worked for everything i am ever had i am self made i literally invented myself. I am chuck norris. born in a log cabin built by my own bare hands. i don't even go on tik tok. hallelujah. some might say rags to riches. That i am but more importaantly raags to bishes. that is all for now.  </p><br>
     </div>
     <div class="verticalLineRight" style="height: auto;"></div>
     <div class="verticalLineLeft"></div>
