--- a/photoGallery.html
+++ b/photoGallery.html
@@ -24,7 +24,7 @@
         <div class="card-mb 2">
           <div>
             <img src="photoGallery/ringHANDTRIPPY4wheeler.jpg">
-            <h2>hand</h2>
+            <h2 class="color-changing-text">hand</h2>
           </div>
         </div>
       </div>
@@ -32,7 +32,7 @@
         <div class="card-mb 2">
           <div>
             <img src="photoGallery/meNFlow.jpg">
-            <h2>me n flowy dog</h2>
+            <h2 class="color-changing-text">me n flowy dog</h2>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="card-mb 2">
           <div>
             <img src="photoGallery/BLESSINVERTREVERB.jpg">
-            <h2>BLESS</h2>
+            <h2 class="color-changing-text">BLESS</h2>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
         <div class="card-mb 2">
           <div>
             <img src="photoGallery/window.jpg">
-            <h2>my window hehaw</h2>
+            <h2 class="color-changing-text">my window hehaw</h2>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <div class="card-mb 2">
           <div>
             <img src="photoGallery/tripBEER.jpg">
-            <h2>trippyebeeer</h2>
+            <h2 class="color-changing-text">trippyebeeer</h2>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <div class="card-mb 2">
           <div>
             <img src="photoGallery/meNFlow.jpg">
-            <h2>picture</h2>
+            <h2 class="color-changing-text">picture</h2>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
         <div class="card-mb 2">
           <div>
             <img src="imgs/darkSideCig.JPG">
-            <h2>ciggy break!</h2>
+            <h2 class="color-changing-text">ciggy break!</h2>
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
         <div class="card-mb 2">
           <div>
             <img src="imgs/luxorTrippy.JPG">
-            <h2>exclusive for u</h2>
+            <h2 class="color-changing-text">exclusive for u</h2>
           </div>
         </div>
       </div>
