--- a/infoSecret.html
+++ b/infoSecret.html
@@ -20,7 +20,7 @@
     <div class="container" style="border-color: white;">
       <a href="index.html"><h2 class="compText" style="color:rgba(0,0,168,255)">MENU</h2></a>
       <br><h3 class="compText" id="aqua">ABOUT</h3>
-      <p class="compText" style="text-indent: 30px;">wow! you found my secret link. Truth be told, I enjoy the green text far more than the format on my blog bleh. This looks stellar. Amazing. Simply incredible. How lucky am i to be the person i am today way better than the other people other days amazing from my skills and talents god given but i worked for everything i am ever had i am self made i literally invented myself. I am chuck norris. born in a log cabin built by my own bare hands. i don't even go on tik tok. hallelujah. some might say rags to riches. That i am but more importaantly raags to bishes. that is all for now.  </p><br>
+      <p class="compText" style="text-indent: 30px;">wow! you found my secret link. Truth be told, I enjoy the green text far more than the format on my blog bleh. This looks stellar. Amazing. Simply incredible. How lucky am i to be the person i am today way better than the other people other days amazing from my skills and talents god given but i worked for everything i am ever had i am self made i literally invented myself. I am chuck norris. born in a log cabin built by my own bare hands. i don't even go on tik tok. hallelujah. some might say rags to riches. That i am but more importaantly raags to bishes. that is all for now. fueled by vibe coding 👽👽 </p><br>
     </div>
     <div class="verticalLineRight" style="height: auto;"></div>
     <div class="verticalLineLeft"></div>
