--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </a>
           <br>
           <a href="https://www.soundgym.co/member/profile?m=kc4fvj2tu87" target="_blank">
-          <h4 class="compText" id="aqua">💎Soundgym💎
+          <h4 class="compText" id="aqua">💎soundgym💎
           </h4></a>
         </div>
         <div class="col-sm">
