added pics 2 page

--- a/photoGallery.html
+++ b/photoGallery.html
@@ -89,7 +89,13 @@
             <h2 class="color-changing-text">exclusive for u</h2>
           </div>
         </div>
-      </div>
+      </div><br><br>
     </div><br>
+    <a href="index.html">
+    <h2 style="background-color: aquamarine;">BACK to MENU</h2>
+  </a>
+    <a href="photoGallery2.html">
+    <h2 style="background-color: aquamarine;">page 2</h2>
+  </a>
 </body>
 </html>
