--- a/photoGallery2.html
+++ b/photoGallery2.html
@@ -23,16 +23,16 @@
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="photoGallery/ringHANDTRIPPY4wheeler.jpg">
-            <h2 class="color-changing-text">hand</h2>
+            <img src="photoGallery2/on!.jpg">
+            <h2 class="color-changing-text">on!</h2>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="photoGallery/meNFlow.jpg">
-            <h2 class="color-changing-text">me n flowy dog</h2>
+            <img src="photoGallery2/donut2.jpg">
+            <h2 class="color-changing-text">tha donut </h2>
           </div>
         </div>
       </div>
@@ -41,16 +41,16 @@
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="photoGallery/BLESSINVERTREVERB.jpg">
-            <h2 class="color-changing-text">BLESS</h2>
+            <img src="photoGallery2/filter.jpg">
+            <h2 class="color-changing-text">donut coffee filter</h2>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="photoGallery/window.jpg">
-            <h2 class="color-changing-text">my window hehaw</h2>
+            <img src="photoGallery2/trippyBoat.JPG">
+            <h2 class="color-changing-text">i sea!/h2></h2>
           </div>
         </div>
       </div>
@@ -59,17 +59,17 @@
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="photoGallery/tripBEER.jpg">
-            <h2 class="color-changing-text">trippyebeeer</h2>
+            <img src="photoGallery2/IMG_0518.JPG">
+            <h2 class="color-changing-text">what???</h2>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="photoGallery/meNFlow.jpg">
-            <h2 class="color-changing-text">picture</h2>
-          </div>
+            <img src="photoGallery2/IMG_0525.JPG">
+            <h2 class="color-changing-text">roman👨‍🎤👨‍🎤</h2>
+          </div> 
         </div>
       </div>
     </div><br>
@@ -77,19 +77,22 @@
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="imgs/darkSideCig.JPG">
-            <h2 class="color-changing-text">ciggy break!</h2>
+            <img src="photoGallery2/musskull.jpeg">
+            <h2 class="color-changing-text">musskull trip</h2>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card-mb 2">
           <div>
-            <img src="imgs/luxorTrippy.JPG">
-            <h2 class="color-changing-text">exclusive for u</h2>
+            <img src="photoGallery2/IMG_0568.JPG">
+            <h2 class="color-changing-text">ah!</h2>
           </div>
         </div>
       </div>
     </div><br>
+    <a href="photoGallery.html">
+    <h2 style="background-color: aquamarine;">page 1 </h2>
+  </a>
 </body>
 </html>
