--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
       <a href="blogPosts/pot.html"><h2 style="color: red;">9. pot - 06/23/2025</h2></a>
       <a href="blogPosts/monttaaiini.html"><h2 style="color: red;">1o. mountian - 07/2/2025</h2></a>
       <a href="blogPosts/gitKeything.html"><h2 style="color: red;">11. git toekn thing - 07/29/2025</h2></a>
+      <a href="blogPosts/contagious.html"><h2 style="color: red;">12. contagious 08/23/25</h2></a>
     </div>
   </div>
 </body>
