--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
       <a href="blogPosts/monttaaiini.html"><h2 style="color: red;">1o. mountian - 07/2/2025</h2></a>
       <a href="blogPosts/gitKeything.html"><h2 style="color: red;">11. git toekn thing - 07/29/2025</h2></a>
       <a href="blogPosts/contagious.html"><h2 style="color: red;">12. contagious 08/23/25</h2></a>
-      <a href="blogPosts/contagious.html"><h2 style="color: red;">13. FOLLOWERS 8/28/25</h2></a>
+      <a href="blogPosts/FOLLOWERS.html"><h2 style="color: red;">13. FOLLOWERS 8/28/25</h2></a>
     </div>
   </div>
 </body>
