--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
       <a href="blogPosts/gitKeything.html"><h2 style="color: red;">11. git toekn thing - 07/29/2025</h2></a>
       <a href="blogPosts/contagious.html"><h2 style="color: red;">12. contagious 08/23/25</h2></a>
       <a href="blogPosts/FOLLOWERS.html"><h2 style="color: red;">13. FOLLOWERS 8/28/25</h2></a>
-      <a href="blogPosts/FOLLOWERS.html"><h2 style="color: red;">14. nothing 09/09/25</h2></a>
+      <a href="blogPosts/new.html"><h2 style="color: red;">14. nothing 09/09/25</h2></a>
     </div>
   </div>
 </body>
