--- a/blogPosts/gitKeything.html
+++ b/blogPosts/gitKeything.html
@@ -22,7 +22,7 @@
         git key thing
       </p>
       <p class="entries" style="padding-left: 100px;">
-       I keep forgetting how to reset my access token for github to save to my keychain thing a ma bob boi. 4 futture ref: settings -> developer settings -> personal access tokens -> tokens classic -> generate new token. then $ git credential-osxkeychain erase ↵
+       I keep forgetting how to reset my access token for github to save to my keychain thing a ma bob boi. 4 futture ref: settings -> developer settings -> personal access tokens -> tokens classic -> generate new token. then git credential-osxkeychain erase ↵
 host=github.com ↵
 protocol=https ↵
 ↵
