--- a/random.html
+++ b/random.html
@@ -57,6 +57,13 @@
       </div>
   </div>
 </div>
+<br><br>
+
+  <div class="container">
+    <a target="_blank" href="https://youtu.be/XheRBpfuuwE">
+      <h2>mybrain.mp4[a special exclusive song for u]</h2>
+    </a>
+  </div><br><br>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
