--- a/random.html
+++ b/random.html
@@ -38,6 +38,16 @@
     <img id="html" class="lang" src="static/imgs/random/IMG_0190.jpg" alt="HTML5" />
   </div><br><br>
 
+  <div class="row">
+    <div class="type" id="cardBorder">
+      <h1>
+    <a href="" class="typewrite" id="color-changing-text" data-period="2000" data-type='[ "type shit.", "I am Creative.", "yea", "TYPE SHIT" ]'>
+      <span class="wrap"></span>
+    </a>
+  </h1>
+    </div>
+  </div>
+
   <div class="container">
     <a href="index.html">
       <h2>back to home</h2>
@@ -69,3 +79,4 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="typing.js"></script>
