--- a/random.html
+++ b/random.html
@@ -41,7 +41,7 @@
   <div class="row">
     <div class="type" id="cardBorder">
       <h1>
-    <a href="" class="typewrite" id="color-changing-text" data-period="2000" data-type='[ "type shit.", "I am Creative.", "yea", "TYPE SHIT" ]'>
+    <a href="" class="typewrite" id="color-changing-text" data-period="2000" data-type='[ "type shit.", "I am a Creative.", "yea", "TYPE SHIT" ]'>
       <span class="wrap"></span>
     </a>
   </h1>
