--- a/random.html
+++ b/random.html
@@ -34,18 +34,28 @@
     </div>
   </div>
 
+
+
+  <div class="row">
+    <div class="col">
   <div class="raaandom">
     <img id="html" class="lang" src="static/imgs/random/IMG_0190.jpg" alt="HTML5" />
   </div><br><br>
 
-  <div class="row">
-    <div class="type" id="cardBorder">
-      <h1>
-    <a href="" class="typewrite" id="color-changing-text" data-period="2000" data-type='[ "type shit.", "I am a Creative.", "yea", "TYPE SHIT" ]'>
-      <span class="wrap"></span>
-    </a>
-  </h1>
+  <br><br><br><br><img class="vibe" id="cardBorder" src="random/Screenshot 2025-09-22 at 8.43.59 PM.png" alt="vibecode"/>
     </div>
+    <div class="col">
+      <div class="type" id="cardBorder">
+        <h1>
+      <a href="" class="typewrite" id="color-changing-text" data-period="2000" data-type='[ "type shit.", "I am a Creative.", "yea", "TYPE SHIT" ]'>
+        <span class="wrap"></span>
+      </a>
+    </h1>
+      </div>
+    </div>
+  </div>
+
+  <div>
   </div>
 
   <div class="container">
