--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
     <div class="container" style="border-color: white;">
       <a href="index.html"><h2 class="compText" style="color:rgba(0,0,168,255)">MENU</h2></a>
       <br><h3 class="compText" id="aqua">ABOUT</h3>
-      <p class="compText" style="text-indent: 30px;">greetings. u have found the official genuine one and only one of a kind bonafide certified G✺o✺D✺z✺I~g.('god-zee-g') website. i own all the rights to everything that i have but only some of the lefts. be advised. 1.6 gigahurtz is right there! write there. There. </p><br>
+      <p class="compText" style="text-indent: 30px;">greetings. u have found the official genuine one and only one of a kind bonafide certified G✺o✺D✺z✺I✺g✺G✺y website. i own all the rights to everything that i have but only some of the lefts. be advised. 1.6 gigahurtz is right there! write there. There. </p><br>
       <h3 class="compText" id="aqua">INSPIRATION</h3>
       <p class="compText" style="text-indent: 30px;">i assume this has no significance to u as a degenerate. this website is a page i based on templeOS, an operating system designed by Terry A. Davis as the 'third temple', the representation of God's return. </p>
       <div class="col-sm">
