--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
           <h4 class="compText" id="aqua">💎soundgym💎
           </h4></a>
         </div>
-        <div class="col-sm">
+      </div>
+
+<div class="row">
+        <div  class="col-sm">
+          <a href="player.html">
+            <img id="music" src="imgs/musicNote.png" alt="musicLogo">
+          </a>
+          <br>
+          <a id="photos" href="player.html">
+          <h4 class="compText" id="aqua">musik</h4></a>
+        </div>
+                <div class="col-sm">
           <a href="info.html">
             <img id="tikTok" src="imgs/infoIcon.png" alt="infoIcon">
           </a>
@@ -117,7 +128,8 @@
           <h4 class="compText" id="aqua">help & about</h4></a>
         </div>
       </div>
-      <br><br><br><br><br><br>
+
+      <br><br>
     </div>
     <div class="verticalLineRight" style="height:auto;"></div>
     <div class="verticalLineLeft"></div>
