--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           <h4 class="compText" id="aqua">soundcloud</h4></a>
         </div>
         <div class="col-sm">
-          <a href="https://www.youtube.com/@godzi_g." target="_blank">
+          <a href="https://www.youtube.com/@godziggy" target="_blank">
             <img id="youTube" src="imgs/youtubeLogo.png" alt="youtubeLogo">
           </a>
           <br>
-          <a href="https://www.youtube.com/@godzi_g." target="_blank">
+          <a href="https://www.youtube.com/@godziggy" target="_blank">
           <h4 class="compText" id="aqua">utube</h4></a>
         </div>
         <div class="col-sm">
