--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
       <a href="blogPosts/FOLLOWERS.html"><h2 style="color: red;">13. FOLLOWERS 8/28/25</h2></a>
       <a href="blogPosts/new.html"><h2 style="color: red;">14. nothing 09/09/25</h2></a>
       <a href="blogPosts/eyeCan't.html"><h2 style="color: red;">15. eye can't 09/17/25</h2></a>
+      <a href="blogPosts/four.html"><h2 style="color: red;">16. four 12/1/25</h2></a>
     </div>
   </div>
 </body>
