--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <h4 class="compText" id="aqua">utube</h4></a>
         </div>
         <div class="col-sm">
-          <a href="https://www.instagram.com/godzi_.g/" target="_blank">
+          <a href="https://www.instagram.com/g0dziggy/" target="_blank">
             <img id="insta" src="imgs/instaLogo.png" alt="instaLogo">
           </a>
           <br>
-          <a href="https://www.instagram.com/godzi_.g/" target="_blank">
+          <a href="https://www.instagram.com/g0dziggy/" target="_blank">
           <h4 class="compText" id="aqua">insta</h4></a>
         </div>
         <div class="col-sm">
@@ -56,11 +56,11 @@
       </div>
       <div class="row">
         <div class="col-sm">
-          <a href="https://www.tiktok.com/@godzi_g77?_t=ZP-8tqCm3danE6&_r=1" target="_blank">
+          <a href="https://www.tiktok.com/@g0dziggy" target="_blank">
             <img id="tikTok" src="imgs/tikTokLogo.png" alt="tikTokLogo">
           </a>
           <br>
-          <a href="https://www.tiktok.com/@godzi_g77?_t=ZP-8tqCm3danE6&_r=1" target="_blank">
+          <a href="https://www.tiktok.com/@g0dziggy" target="_blank">
           <h4 class="compText" id="aqua">tiktok</h4></a>
         </div>
         <div class="col-sm">
