--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           <h4 class="compText" id="aqua">insta</h4></a>
         </div>
         <div class="col-sm">
-          <a href="https://x.com/_godzi_G" target="_blank">
+          <a href="https://x.com/g0dziggy" target="_blank">
             <img id="x" src="imgs/xLogo.png" alt="XLogo">
           </a>
           <br>
-          <a href="https://x.com/_godzi_G" target="_blank">
+          <a href="https://x.com/g0dziggy" target="_blank">
           <h4 class="compText" id="aqua">X</h4></a>
         </div>
       </div>
